[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scenes/GUI/PauseMenu.gd" id="1_ngr2p"]
[ext_resource type="FontFile" uid="uid://cdub2jsf7ac01" path="res://Fonts/roses-are-ff0000/RosesareFF0000.ttf" id="2_qg8c8"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -641.5
offset_top = -361.5
offset_right = 641.5
offset_bottom = 361.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ngr2p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PausedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qg8c8")
theme_override_font_sizes/font_size = 70
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qg8c8")
theme_override_font_sizes/font_size = 50
text = "Resume Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qg8c8")
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
